# SR2-Flat_Shading

./: CMakeLists.txt  README.md  color.cpp  color.h  framebuffer.cpp  framebuffer.h  main.cpp  navecita.mtl  objSettings.cpp  objSettings.h  print.h  render.cpp  render.h  run.sh  uniform.cpp  uniform.h  vertexGML.cpp  vertexGML.h
